--- a/src/assets/scss/1-helpers/_variables.scss
+++ b/src/assets/scss/1-helpers/_variables.scss
@@ -125,7 +125,7 @@ $size-lg: 960px !default;
 $size-xl: 1280px !default;
 $size-2x: 1440px !default;
 
-$responsive-breakpoint: $size-md !default;
+$responsive-breakpoint: $size-xs !default;
 
 // Z-index
 $zindex-0: 1 !default;
