--- a/app/root/template-parts/nav.njk
+++ b/app/root/template-parts/nav.njk
@@ -17,10 +17,10 @@
       <nav>
          <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./blog.html">Blog</a></li>
+            <!-- <li><a href="./blog.html">Blog</a></li> -->
             <li><a href="./about.html">About</a></li>
             <li><a href="./photography.html">Photography</a></li>
-            <li><a href="./paintinks.html">Painting</a></li>
+            <!-- <li><a href="./paintinks.html">Painting</a></li> -->
             <li><a href="./coding.html">Coding</a></li>
          </ul>
       </nav>
